main.css
body {
  margin: 0;
}

.content {
  color: #ffffff;
  margin: auto;
  padding-left: 5em;
  padding-right: 5em;
  margin-bottom: 5em;
  max-width: 960px;
  min-width: 200px;
}

#background {
  min-height: 100%;
  width: 100%;
  z-index: -1;
  position: fixed;
  padding:0;
  margin:0;
  opacity: 0.9;
}

.typeText::after {
  content: "|";
  animation: blink 1s step-end infinite;
}

@keyframes blink {
  0%,
  100% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
}

img {
  transition: transform 0.2s ease-in-out;
}

img:hover {
  /*transform: rotate(10deg);*/
  transform: scale(1.125, 1.125);
}

.playground img:hover {
  /*transform: rotate(10deg);*/
  transform: scale(1, 1);
}

hr {
  display: none;
  margin-top: 4em;
}

.break {
  display: none;
}

.introduction {
  font-family: Arial, Helvetica, sans-serif;
  padding-top: 4em;
  display: none;
}

.introduction h1 {
  font-family: Arial, Helvetica, sans-serif;
  margin-top: 2em;
  border-bottom: 1px solid white;
  padding-bottom: 0.5em;
  display: inline-block;
}

.introduction h2 {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: lighter;
  margin-top: 2em;
  margin-bottom: 2em;
}

.playground h3 {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: lighter;
  font-size: 16pt;
  text-align: center;
  margin-top: 2em;
}

.introduction p {
  font-size: 16pt;
}

.introduction footer {
  text-align: center;
}

.contact li,
a {
  text-decoration: none;
  font-size: 16pt;
  font-family: Arial, Helvetica, sans-serif;
  color: #ffffff;
  padding-top: 2em;
  min-width: 200px;
}

.contact {
  text-align: center;
  margin-top: 2em;
}

.contact a {
  margin-right: 2em;
  margin-left: 2em;
  min-width: 400px;
}

@media (width >= 1250px) {
  .top-nav {
    background-color: rgba(17, 17, 17, 0.795);
    border-radius: 50px;
    width: 35em;
    margin: 2em auto;
    position: fixed;
    left: 50%;
    transform: translateX(-50%);
    display: none;
    z-index: 1;
  }
}

@media (width < 1250px) {
  .top-nav {
    scale: 1.5;
    background-color: rgba(17, 17, 17, 0.795);
    border-radius: 50px;
    width: 35em;
    margin: 4em auto;
    position: fixed;
    left: 65%;
    transform: translateX(-50%);
    display: none;
    z-index: 1;
  }
}

.top-nav li {
  list-style-type: none;
  font-size: 1em;
  display: inline;
  padding-right: 2em;
}

.top-nav a {
  font-family: Arial, Helvetica, sans-serif;
  font-weight: lighter;
  font-size: 16pt;
  color: #39cf37;
}

.bio {
  line-height: 2em;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: lighter;
}

.portfolio {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 24pt;
  display: none;
}

.projects {
  display: flex;
  justify-content: left;
}

.projects h1 {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 24pt;
  display: none;
}

.projects span {
  display: flex;
  margin-bottom: 0.5em;
}

.projects p {
  font-size: 16pt;
  font-family: Arial, Helvetica, sans-serif;
  color: #ffffff;
  list-style-type: none;
  display: inline-flex;
  padding-left: 1em;
  padding-right: 1em;
  padding-top: 0.125em;
  padding-bottom: 0.125em;
  background-color: #111111;
  border-radius: 25px;
  white-space: nowrap;
  margin-right: 0.125em;
  margin-top: 0;
}

.project-img {
  margin-top: 5em;
  margin-left: 10em;
  padding-right: 5em;
  cursor: pointer;
  display: none;
}

@media (width >= 1250px) {
  .project-text {
    font-size: 16pt;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: lighter;
    display: none;
  }
}

@media (width < 1250px) {
  .project-text {
    font-size: 20pt;
    font-family: Arial, Helvetica, sans-serif;
    font-weight: lighter;
    display: none;
  }
}

.languages-carousel {
  margin: 2em auto;
  width: 90%;
  display: flex;
  overflow-x: auto;
  touch-action: none;
}

.languages-carousel::-webkit-scrollbar {
  display: none;
}

.languages {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.5em;
  animation: spin 25s infinite linear;
  padding-right: 1em;
}

.languages a {
  flex: 0 0 2em;
  height: 2em;
  padding: 1em;
  border-radius: .2em;
  text-align: center;
  align-content: center;
}

.books-carousel {
  margin: 2em auto;
  display: flex;
  overflow-x: auto;
  touch-action: none;
}

.books-carousel::-webkit-scrollbar {
  display: none;
}

.books {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1.5em;
  animation: spin 25s infinite linear;
  padding-right: 1em;
}

.books a {
  flex: 0 0 2em;
  height: 25em;
  padding: 1em;
  padding-left: 4em;
  padding-right: 8em;
  border-radius: .2em;
  text-align: center;
  align-content: center;
}

.books img {
  height: 100%;
}

@keyframes spin {
  from {translate: 0;}
  to {translate: -100%}
}

.playground img {
  display: flex;
  margin-top: 4em;
  width: 90%;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

* {
  scroll-behavior: smooth;
}

